STYLE: Added the initial countdown feature in and ensured that the colors and content spacing match both stylesheets.

--- a/assets/css/style-dark.css
+++ b/assets/css/style-dark.css
@@ -88,6 +88,28 @@ h6 {
     color: gold;
 }
 
+/* ----------------------------------------------------------------- Timer */
+
+#timer {
+    position: absolute;
+    border: #000 2px solid;
+    z-index: 1;
+    max-width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 50%;
+    background-color: #000;
+    color: gold;
+}
+
+#seconds-left {
+    font-size: 40px;
+}
+
+.no-display {
+    display: none;
+}
+
 /* ----------------------------------------------------------------- Left Deck of Cards */
 
 #left-deck {
@@ -98,10 +120,10 @@ h6 {
     height: 100%;
     align-items: center;
     justify-content: center;
-    border: #000 2px solid;
+    border: gold 2px solid;
     margin: 0px 10px;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(4, auto);
     grid-gap: 1em;
     background: lightslategrey;
 }
