--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,27 @@ body {
     box-sizing: border-box;
 }
 
+/* ----------------------------------------------------------------- Timer */
+
+#timer {
+    position: absolute;
+    border: #000 2px solid;
+    z-index: 1;
+    max-width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 50%;
+    background-color: #000;
+    color: gold;
+}
+
+#seconds-left {
+    font-size: 40px;
+}
+
+.no-display {
+    display: none;
+}
 /* ----------------------------------------------------------------- Left Deck of Cards */
 
 #left-deck {
@@ -88,7 +109,7 @@ body {
     border: #000 2px solid;
     margin: 0px 10px;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(4, auto);
     grid-gap: 1em;
     background: skyblue;
 }
